--- a/network/stellar-disbursement-platform/admin-guide/migrating-to-sdp-multi-tenant.mdx
+++ b/network/stellar-disbursement-platform/admin-guide/migrating-to-sdp-multi-tenant.mdx
@@ -276,6 +276,8 @@ tenant="bluecorp"
 baseURL="http://$tenant.stellar.local:8000"
 sdpUIBaseURL="http://$tenant.stellar.local:3000"
 ownerEmail="owner@$tenant.org"
+# NOTE: please refer to the distribution_account_type values in the API reference
+distributionAccountType="DISTRIBUTION_ACCOUNT.STELLAR.ENV"
 
 curl -X POST http://localhost:8003/tenants \
      -H "Content-Type: application/json" \
@@ -288,6 +290,7 @@ curl -X POST http://localhost:8003/tenants \
             "owner_email": "'"$ownerEmail"'",
             "owner_first_name": "john",
             "owner_last_name": "doe"
+            "distribution_account_type": "'"$distributionAccountType"'",
      }'
 ```
 
