Reword to avoid ambiguity

--- a/docs/learn/fundamentals/stellar-consensus-protocol.mdx
+++ b/docs/learn/fundamentals/stellar-consensus-protocol.mdx
@@ -52,7 +52,7 @@ A node can have four opinions on a statement (let’s call the statement “A”
 - I don’t know anything about A and have no opinion
 - I vote for A, it’s valid, but I don’t know if it’s safe to act on it yet
 - I accept A, because enough nodes supported this statement, but I don’t know if it’s safe to act on it yet
-- I confirm A, it is safe to act on it. Even if every node in my quorum has not confirmed A, they will not be able to confirm anything else but A.
+- I confirm A, it is safe to act on it. Even if not every node in my quorum has confirmed A, they will not be able to confirm anything else but A.
 
 To transition between the states above, federated voting has the following rules:
 
